--- a/mod_security.conf
+++ b/mod_security.conf
@@ -1,5 +1,5 @@
-LoadModule security2_module modules/mod_security2.so
-LoadModule unique_id_module modules/mod_unique_id.so
+LoadModule security2_module /usr/lib/apache2/modules/mod_security2.so
+LoadModule unique_id_module /usr/lib/apache2/modules/mod_unique_id.so
 
 <IfModule mod_security2.c>
     # ModSecurity Core Rules Set configuration
